# mcploitable

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  play  pyproject.toml  simulate
docs/: RESULTS.md  SAFETY.md  SCENARIOS.md  SERVERS.md  SIMULATIONS.md
examples/: play.py
harness/: asi02_unit_check.py
harness/echoleak/: README.md  collector.py  mailclient.py  probe_prompt.md  renderer.py  run_render.py
harness/lab/: README.md  play.py  reset.sh  scoreboard.py  simulate.py  submit.sh  victim_runner.sh
harness/lab/scenarios/asi01-mail/: allowed_tools.txt  extract_brief.py  ingest.sh  mcp.json.tmpl  oracle.sh  prompt.json  system.txt  task.txt
harness/lab/scenarios/asi02-analytics/: allowed_tools.txt  ingest.sh  mcp.json.tmpl  oracle.sh  prompt.json  system.txt  task.txt
harness/lab/scenarios/asi03-recovery/: allowed_tools.txt  ingest.py  ingest.sh  mcp.json.tmpl  oracle.sh  prompt.json  system.txt  task.txt
harness/lab/scenarios/asi04-plugin/: allowed_tools.txt  ingest.sh  mcp.json.tmpl  oracle.sh  prompt.json  system.txt  task.txt
harness/lab/scenarios/asi05-calc/: allowed_tools.txt  ingest.sh  ingest_upload.py  mcp.json.tmpl  prompt.json  system.txt  task.txt
harness/lab/scenarios/asi06-memory/: allowed_tools.txt  ingest.sh  mcp.json.tmpl  prompt.json  system.txt  task.txt
harness/lab/scenarios/asi07-a2a/: allowed_tools.txt  ingest.sh  mcp.json.tmpl  prompt.json  system.txt  task.txt
src/mcploitable/: __init__.py  config.py  server.py
src/mcploitable/sandbox/: __init__.py  database.py  documents.py  scoreboard.py  secrets.py
src/mcploitable/scenarios/: __init__.py  asi01_goal_hijack.py  asi02_tool_misuse.py  asi03_identity_abuse.py  asi04_supply_chain.py  asi05_code_execution.py  base.py  common.py
src/mcploitable/servers/: __init__.py  analytics.py  calc_service.py  helpdesk.py  mail.py  memory.py  ops_assistant.py  orchestrator.py  recovery.py  toolhub.py
tests/: test_asi02_unit_check.py  test_scenarios.py  test_servers.py
