[project]
name = "mcploitable"
version = "0.2.0"
description = "A collection of deliberately vulnerable, ordinary-looking MCP servers for agentic-security research, mapped to the OWASP Top 10 for Agentic Applications (ASI). The 'Metasploitable' of MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mcploitable contributors" }]
keywords = ["mcp", "security", "training", "owasp", "agentic", "vulnerable", "ctf"]
dependencies = [
    "mcp>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# One standalone server per vulnerability. Each presents as an ordinary tool;
# the ASI tag in the name records which OWASP ASI class it demonstrates.
"helpdesk-ASI01" = "mcploitable.servers.helpdesk:main"
"analytics-ASI02" = "mcploitable.servers.analytics:main"
"ops-assistant-ASI03" = "mcploitable.servers.ops_assistant:main"
"toolhub-ASI04" = "mcploitable.servers.toolhub:main"
"calc-service-ASI05" = "mcploitable.servers.calc_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcploitable"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
