[project]
name = "mcploitable"
version = "0.2.0"
description = "A collection of deliberately vulnerable, ordinary-looking MCP servers for agentic-security research, mapped to the OWASP Top 10 for Agentic Applications (ASI). The 'Metasploitable' of MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mcploitable contributors" }]
keywords = ["mcp", "security", "training", "owasp", "agentic", "vulnerable", "ctf"]
dependencies = [
    # >=1.28.1 avoids a fastmcp find_context_parameter bug (issubclass() on a
    # list[dict] return annotation raises TypeError) present in 1.27.2 and
    # earlier 1.2x releases.
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# One standalone server per vulnerability. Each presents as an ordinary,
# generic-named tool; the OWASP ASI class it demonstrates is documented in
# docs/operator/SERVERS.md, not in the name.
"mail-assistant" = "mcploitable.servers.mail:main"
"analytics-bi" = "mcploitable.servers.analytics:main"
"account-recovery" = "mcploitable.servers.recovery:main"
"plugin-hub" = "mcploitable.servers.toolhub:main"
"calc" = "mcploitable.servers.calc_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcploitable"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
